--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ function topFunction() {
     
 <!--main image-->
 <div class="container">
-<p class="line-1 anim-typewriter" style="color: white; font-family: courier new; font-weight: bold;">The future influences the present just as much as the past. -Friedrich Nietzsche</p>
+<p class="line-1 anim-typewriter" style="color: white; font-family: courier new; font-weight: bold;">"The future influences the present just as much as the past." -Friedrich Nietzsche</p>
 </div>
 <!--animated welcome-->
 <div class="wrapper">
