--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ data-cycle-speed="200">
 <!--end of audio section-->
 
 <!--beginning of parallax image-->
-<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
+<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/jourparallax1.png">
 </div>
 <!--end of parallax image-->
 
@@ -236,7 +236,7 @@ data-cycle-speed="200">
 <div class="row">
 <h1 id="vid">Megan Healy: The Cal Poly Journalism Alumna Who Learned by Doing</h1>
 <article>
-<p class="tab">Text goes here</p>    
+<p class="tab" style= "font-size: 20px;" >Megan Healy talks about how the Cal Poly journalism major prepared her for life as a KSBY reporter and anchor.</p>    
 <video width="100%" height="100%" poster="img/posterimg.png" controls>
 <source src="img/meganhealy.mp4" type="video/mp4">
 Your browser does not support the video tag.
