--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function topFunction() {
 <div class="brand"><img src="img/journologo.png" width="65" height="60" alt=""/></div>
 <nav>
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
-  <ul class="nav-list">
+  <ul class="nav-list" style= "font-family: Krungthep;">
         <li>
           <a href="#home">About</a>
         </li>
@@ -216,13 +216,14 @@ data-cycle-speed="200">
 <img src="img/adrian.gif" class="image2" alt="description" onMouseOver="this.src='img/adrian2.jpg'" onMouseOut="this.src='img/adrian.gif'" onClick="document.getElementById('audio_1').play(); return false;" onDblClick="document.getElementById('audio_1').pause(); return false;">
  /&gt; 
             
-<img src="img/tula.gif" class="image2" alt="description" onMouseOver="this.src='img/tula2.jpg'" onMouseOut="this.src='img/tula.gif'" onClick="document.getElementById('audio_2').play(); return false;" onDblClick="document.getElementById('audio_2').pause(); return false;">
+<img src="img/tula.gif" class="image2" alt="description" onMouseOver="this.src='img/tulaimg2.png'" onMouseOut="this.src='img/tula.gif'" onClick="document.getElementById('audio_2').play(); return false;" onDblClick="document.getElementById('audio_2').pause(); return false;">
  /&gt;
             
 <img src="img/cisco.gif" class="image2" alt="description" onMouseOver="this.src='img/cisco2.jpg'" onMouseOut="this.src='img/cisco.gif'" onClick="document.getElementById('audio_3').play(); return false;" onDblClick="document.getElementById('audio_3').pause(); return false;">
 /&gt;
 </div>
 </div>
+<p class="tab"><a href="#vid">Megan Healy at KSBY</a></p>
 </article>
 </div>
 <!--end of audio section-->
@@ -241,6 +242,7 @@ data-cycle-speed="200">
 <source src="img/meganhealy.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
+    <p class="tab"><a href="#num">More Information</a></p>
 </article>
 </div>
 
