--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function topFunction() {
 </div>
     
 <!--beginning of main content area-->
-<div class="row whiteBG">
+<div class="row whiteBG" style= "font-size: 16px">
 <h2 id="home">About Journo Journeys</h2>
 <article>
 <p class="tab">Discover the potential avenues you can pursue with a Cal Poly journalism degree by taking a glimpse into the lives of Cal Poly journalism alumni.<br>See how these individuals have applied Cal Poly's esteemed "learn by doing" approach to their current jobs.</p>
@@ -160,10 +160,10 @@ function topFunction() {
 </div>
 
 <!--beginning of slideshow section-->
-<div class="row blueBG"><!--beginning of row-->
+<div class="row blueBG" style= "font-size: 16px"><!--beginning of row-->
 <h2 id="gal">A Day at the Tribune</h2>
 <article><!--beginning of article-->
-<p class="tab">Join me on my visit to the Tribune newsroom, where I speak to three Cal Poly alumni working there.</p>
+<p class="tab">Join me as I visit the Tribune newsroom, where I speak to three Cal Poly alumni working there.</p>
 <!--beginning of slideshow-->
 <div id="slider"
 data-cycle-caption="#alt-caption"
@@ -195,7 +195,7 @@ data-cycle-speed="200">
 <!--end of slideshow section-->
 	
 <!--beginning of audio section-->
-<div class="row">
+<div class="row" style= "font-size: 16px">
 <h1 id="tl">What do you plan to do with your journalism degree?</h1>
 <article>
   <p class="tab">Click on images to hear what these third-year Cal Poly journalism majors have to say. (double-click to pause audio). </p>
@@ -237,7 +237,7 @@ data-cycle-speed="200">
 <div class="row">
 <h1 id="vid">Megan Healy: The Cal Poly Journalism Alumna Who Learned by Doing</h1>
 <article>
-<p class="tab" style= "font-size: 20px;" >Megan Healy talks about how the Cal Poly journalism major prepared her for life as a KSBY reporter and anchor.</p>    
+<p class="tab" style= "font-size: 16px;" >Megan Healy talks about how the Cal Poly journalism major prepared her for life as a KSBY reporter and anchor.</p>    
 <video width="100%" height="100%" poster="img/posterimg.png" controls>
 <source src="img/meganhealy.mp4" type="video/mp4">
 Your browser does not support the video tag.
