--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@ function topFunction() {
     
 <!--beginning of main content area-->
 <div class="row whiteBG" style= "font-size: 16px">
-<h2 id="home">About Journo Journeys</h2>
+<h2 id="home">About Amanda Wernik</h2>
 <article>
-<p class="tab">Discover the potential avenues you can pursue with a Cal Poly journalism degree by taking a glimpse into the lives of Cal Poly journalism alumni.<br>See how these individuals have applied Cal Poly's esteemed "learn by doing" approach to their current jobs.</p>
+<p class="tab">An award-winning on-air personality for KCPR Radio, Amanda has extensive experience with audio storytelling, editing, and multimedia journalism. <br>This website contains a portfolio of the body of work Amanda has created as a journalism student at Cal Poly.  </p>
 <p class="tab"><a href="#gal">A Day at The Tribune</a></p>
 </article>
 </div>
