--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function hasScrolled() {
     lastScrollTop = st;
 }
     
-var final = '\"The future influences the present just as much as the past.\" -Friedrich Nietzsche';
+var final = '\"Journalism can never be silent: that is its greatest virtue and its greatest fault.\" -Henry Grunwald';
 var temp = '';
     
 function typewriter() {
